--- a/gato.html
+++ b/gato.html
@@ -26,8 +26,8 @@
             </li>
             <br>
             <li>
-                <img src="/assets/img/gato3.jpg" alt="Gato samuel" width="400px">
-                <a href="gato3.html">Samuel</a>
+                <img src="/assets/img/gato3.jpg" alt="Gata princesa" width="400px">
+                <a href="gato3.html">Princesa</a>
             </li>
         </ul>
     </section>
