--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h2 class="center">Nuestras secciones de ayuda:</h2>
         <div class="container">
             <img src="/assets/img/gato.png" width="400px">
-            <a target="_blank" href="gato.html">Gatos</a>
+            <a href="gato.html">Gatos</a>
         </div>
         <br>
         <div class="container">
             <img src="/assets/img/perro.jpg" width="400px">
-            <a target="_blank" href="perro.html">Perros</a>
+            <a href="perro.html">Perros</a>
         </div>
     </section>
     
