--- a/gato3.html
+++ b/gato3.html
@@ -9,13 +9,13 @@
 <body>
     <section class="tamano">
         <article class="ficha">
-            <img src="assets/img/gato1.jpeg" alt="Nico" width="600px">
+            <img src="assets/img/gato3.jpg" alt="Princesa" width="600px">
             <div>
-            <p>Nombre: Nicolas</p>
-            <p>Edad: 2 años</p>
-            <p>Genero: Macho</p>
+            <p>Nombre: Princesa</p>
+            <p>Edad: 1 año</p>
+            <p>Genero: Hembra</p>
             <p>Esterlizado</p>
-            <p>Numero chip: 76859403</p>
+            <p>Numero chip: 680486794</p>
             </div>  
         </article>
         <a href="gato.html" class="retroceder">Regresar a pagina de gatos</a>
