--- a/ficha_gatos/gato1.html
+++ b/ficha_gatos/gato1.html
@@ -9,16 +9,16 @@
 <body>
     <section class="tamano">
         <article class="ficha">
-            <img src="assets/img/gato2.png" alt="Juan" width="600px">
+            <img src="/assets/img/gato1.jpeg" alt="Nico" width="600px">
             <div>
-            <p>Nombre: Juan</p>
-            <p>Edad: 3 años</p>
+            <p>Nombre: Nicolas</p>
+            <p>Edad: 2 años</p>
             <p>Genero: Macho</p>
             <p>Esterlizado</p>
-            <p>Numero chip: 91827364</p>
+            <p>Numero chip: 76859403</p>
             </div>  
         </article>
-        <a href="gato.html" class="retroceder">Regresar a pagina de gatos</a>
+        <a href="/gato.html" class="retroceder">Regresar a pagina de gatos</a>
     </section>
     
 </body>
