--- a/ficha_gatos/gato3.html
+++ b/ficha_gatos/gato3.html
@@ -9,7 +9,7 @@
 <body>
     <section class="tamano">
         <article class="ficha">
-            <img src="assets/img/gato3.jpg" alt="Princesa" width="600px">
+            <img src="/assets/img/gato3.jpg" alt="Princesa" width="600px">
             <div>
             <p>Nombre: Princesa</p>
             <p>Edad: 1 año</p>
@@ -18,7 +18,7 @@
             <p>Numero chip: 680486794</p>
             </div>  
         </article>
-        <a href="gato.html" class="retroceder">Regresar a pagina de gatos</a>
+        <a href="/gato.html" class="retroceder">Regresar a pagina de gatos</a>
     </section>
     
 </body>
