--- a/gato.html
+++ b/gato.html
@@ -17,17 +17,17 @@
            <h2>Nuestros gatos que buscan familia:</h2>
             <li>
                 <img src="/assets/img/gato1.jpeg" alt="Gato nico" width="400px">
-                <a href="gato1.html">Nico</a>
+                <a href="/ficha_gatos/gato1.html">Nico</a>
             </li>
             <br>
             <li>
                 <img src="/assets/img/gato2.png" alt="Gato juan" width="400px">
-                <a href="gato2.html">Juan</a>
+                <a href="ficha_gatos/gato2.html">Juan</a>
             </li>
             <br>
             <li>
                 <img src="/assets/img/gato3.jpg" alt="Gata princesa" width="400px">
-                <a href="gato3.html">Princesa</a>
+                <a href="ficha_gatos/gato3.html">Princesa</a>
             </li>
         </ul>
     </section>
