--- a/ficha_perros/perro2.html
+++ b/ficha_perros/perro2.html
@@ -9,16 +9,16 @@
 <body>
     <section class="tamano">
         <article class="ficha">
-            <img src="/assets/img/gato1.jpeg" alt="Nico" width="600px">
+            <img src="/assets/img/perro2.jpg" alt="Haaland" width="600px">
             <div>
-            <p>Nombre: Nicolas</p>
+            <p>Nombre: Haaland</p>
             <p>Edad: 2 años</p>
             <p>Genero: Macho</p>
             <p>Esterlizado</p>
-            <p>Numero chip: 76859403</p>
+            <p>Numero chip: 0395025</p>
             </div>  
         </article>
-        <a href="/gato.html" class="retroceder">Regresar a pagina de gatos</a>
+        <a href="/perro.html" class="retroceder">Regresar a pagina de gatos</a>
     </section>
     
 </body>
