--- a/perro.html
+++ b/perro.html
@@ -17,17 +17,17 @@
            <h2>Nuestros perros que buscan familia:</h2>
             <li>
                 <img src="/assets/img/perro1.jpg" alt="Perro chocolo" width="400px">
-                <a href="gato1.html">Chocolo</a>
+                <a href="ficha_perros/perro1.html">Chocolo</a>
             </li>
             <br>
             <li>
                 <img src="/assets/img/perro2.jpg" alt="Perro haaland" width="400px">
-                <a href="gato2.html">Haaland</a>
+                <a href="ficha_perros/perro2.html">Haaland</a>
             </li>
             <br>
             <li>
-                <img src="/assets/img/perro3.jpg" alt="Perro carlos" width="400px">
-                <a href="gato3.html">Carlos</a>
+                <img src="/assets/img/perro3.jpg" alt="Perra cereza" width="400px">
+                <a href="ficha_perros/perro3.html">Cereza</a>
             </li>
         </ul>
     </section>
