--- a/ficha_perros/perro2.html
+++ b/ficha_perros/perro2.html
@@ -18,7 +18,7 @@
             <p>Numero chip: 0395025</p>
             </div>  
         </article>
-        <a href="/perro.html" class="retroceder">Regresar a pagina de gatos</a>
+        <a href="/perro.html" class="retroceder">Regresar a pagina de perros</a>
     </section>
     
 </body>
